--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
+    "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.5.1",
     "mobx": "^6.6.1",
@@ -19,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "ytdl-core": "^4.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
