add database model and global context

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.21.3",
+    "sqlite3": "^5.0.10",
     "web-vitals": "^0.2.4",
     "ytdl-core": "^4.11.0"
   },
