--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.6.1",
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
+    "ffmpeg-static": "^5.0.2",
     "framer-motion": "^6.5.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
