fix YTDL-4 \ YTDL-6

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "win": {
       "target": "portable"
     },
+    "icon": "favicon.png",
     "extends": null
   },
   "name": "youtube-downloader",
